--- a/R/p61_GAP_ML_Full.Rmd
+++ b/R/p61_GAP_ML_Full.Rmd
@@ -332,7 +332,7 @@ DataPartition_DF <- createDataPartition(GX_DF$Phenotype,times = Number_of_Splits
 #Variables for Step 2
 #set number of subsets to test
 subsets <- c(1:30)*25
-subsets <- c(1:3)*25
+#subsets <- c(1:3)*25
 boot_n=25
 #boot_n=5
 #set control parameters 
@@ -395,10 +395,10 @@ ML_list2<-list(
     rf=caretModelSpec(method="rf", tuneGrid=expand.grid(.mtry=(1:30)))    
 )
 
-ML_list2<-list(
-    glmnet=caretModelSpec(method="glmnet",tuneLength=3),
-    rf=caretModelSpec(method="rf", tuneGrid=expand.grid(.mtry=(1:3)))    
-)
+#ML_list2<-list(
+#    glmnet=caretModelSpec(method="glmnet",tuneLength=3),
+#    rf=caretModelSpec(method="rf", tuneGrid=expand.grid(.mtry=(1:3)))    
+#)
 
 
 
