--- a/R/p61_Dejong_ML_Full.Rmd
+++ b/R/p61_Dejong_ML_Full.Rmd
@@ -343,7 +343,7 @@ DataPartition_DF <- createDataPartition(GX_DF$Phenotype,times = Number_of_Splits
 #Variables for Step 2
 #set number of subsets to test
 subsets <- c(1:30)*25
-#subsets <- c(1:3)*25
+#subsets <- c(1:3)*25 
 boot_n = 30
 #boot_n = 5
 #set control parameters 
@@ -454,7 +454,7 @@ full_data[[split]]$ensemble_full
 
 full_data$Split_1$caret_list
 
-full_data
+full_data$Split_2$ensemble_model_preds_cat
 
 #test caret stack in dejong
 results_dejong<-data.frame() #empty list wrapper. 
